{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 54,
  "lineage": "0223daaa-156c-82be-b476-c6684aa24280",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_external",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "8080",
                  "8081",
                  "4040",
                  "7077",
                  "50070"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-22T07:03:31.741-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fine-branch-478814-e2/global/firewalls/spark-allow-ssh-web",
            "log_config": [],
            "name": "spark-allow-ssh-web",
            "network": "https://www.googleapis.com/compute/v1/projects/fine-branch-478814-e2/global/networks/spark-vpc-network",
            "priority": 1000,
            "project": "fine-branch-478814-e2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fine-branch-478814-e2/global/firewalls/spark-allow-ssh-web",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.spark_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-11-22T07:03:31.622-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/fine-branch-478814-e2/global/firewalls/spark-allow-internal",
            "log_config": [],
            "name": "spark-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/fine-branch-478814-e2/global/networks/spark-vpc-network",
            "priority": 1000,
            "project": "fine-branch-478814-e2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fine-branch-478814-e2/global/firewalls/spark-allow-internal",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.spark_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "spark_edge",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2404-noble-arm64-v20251121",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/fine-branch-478814-e2/zones/asia-southeast1-b/disks/spark-edge"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/fine-branch-478814-e2/zones/asia-southeast1-b/instances/spark-edge",
            "instance_id": "454468681855690887",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQC69zRrIiBg4krQbBusRQ6NwzFzQ1+BlL3LkN5tMor0Om/Y7BMKfBg2hc8GdHwrOtZVL/+82EkeZgVF9JHt78vOlHYJOFWwEVjvq6TcJaIoukDjZfQR99ndwyi91naCC0UBKDfbcGsQRjiBKz5t0r+jExwg9QHCpKZkm/ykZnYW7CelxSxst1RUoFdbAdr6Dun5d9iLMRneEOYtaeVL/kLUV2zUgfzsvxAMTdHcHEyWiOrnf9wWRKC2y/tiZhc4G5v2HI0ODatmiC9PM71dFC6+N0kZqO6ekwdqDUh/YGQ+YliNwPsx3XJdPgRD1G0npNkHiU8ZmuvGMBDMJhVWB5wr btn150103@gmail.com"
            },
            "metadata_fingerprint": "7zopuWFi3F0=",
            "name": "spark-edge",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.142.205.36",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/fine-branch-478814-e2/global/networks/spark-vpc-network",
                "network_ip": "10.0.1.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/fine-branch-478814-e2/regions/asia-southeast1/subnetworks/spark-subnet-sg",
                "subnetwork_project": "fine-branch-478814-e2"
              }
            ],
            "project": "fine-branch-478814-e2",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/fine-branch-478814-e2/zones/asia-southeast1-b/instances/spark-edge",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "spark-node"
            ],
            "tags_fingerprint": "f888S1J6MFw=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.spark_vpc",
            "google_compute_subnetwork.spark_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "spark_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2404-noble-arm64-v20251121",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/fine-branch-478814-e2/zones/asia-southeast1-b/disks/spark-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/fine-branch-478814-e2/zones/asia-southeast1-b/instances/spark-master",
            "instance_id": "5119088883716091444",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQC69zRrIiBg4krQbBusRQ6NwzFzQ1+BlL3LkN5tMor0Om/Y7BMKfBg2hc8GdHwrOtZVL/+82EkeZgVF9JHt78vOlHYJOFWwEVjvq6TcJaIoukDjZfQR99ndwyi91naCC0UBKDfbcGsQRjiBKz5t0r+jExwg9QHCpKZkm/ykZnYW7CelxSxst1RUoFdbAdr6Dun5d9iLMRneEOYtaeVL/kLUV2zUgfzsvxAMTdHcHEyWiOrnf9wWRKC2y/tiZhc4G5v2HI0ODatmiC9PM71dFC6+N0kZqO6ekwdqDUh/YGQ+YliNwPsx3XJdPgRD1G0npNkHiU8ZmuvGMBDMJhVWB5wr btn150103@gmail.com"
            },
            "metadata_fingerprint": "7zopuWFi3F0=",
            "name": "spark-master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.126.74.86",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/fine-branch-478814-e2/global/networks/spark-vpc-network",
                "network_ip": "10.0.1.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/fine-branch-478814-e2/regions/asia-southeast1/subnetworks/spark-subnet-sg",
                "subnetwork_project": "fine-branch-478814-e2"
              }
            ],
            "project": "fine-branch-478814-e2",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/fine-branch-478814-e2/zones/asia-southeast1-b/instances/spark-master",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "spark-node"
            ],
            "tags_fingerprint": "f888S1J6MFw=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.spark_vpc",
            "google_compute_subnetwork.spark_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "spark_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2404-noble-arm64-v20251121",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/fine-branch-478814-e2/zones/asia-southeast1-b/disks/spark-worker-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/fine-branch-478814-e2/zones/asia-southeast1-b/instances/spark-worker-1",
            "instance_id": "6118275448461618740",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQC69zRrIiBg4krQbBusRQ6NwzFzQ1+BlL3LkN5tMor0Om/Y7BMKfBg2hc8GdHwrOtZVL/+82EkeZgVF9JHt78vOlHYJOFWwEVjvq6TcJaIoukDjZfQR99ndwyi91naCC0UBKDfbcGsQRjiBKz5t0r+jExwg9QHCpKZkm/ykZnYW7CelxSxst1RUoFdbAdr6Dun5d9iLMRneEOYtaeVL/kLUV2zUgfzsvxAMTdHcHEyWiOrnf9wWRKC2y/tiZhc4G5v2HI0ODatmiC9PM71dFC6+N0kZqO6ekwdqDUh/YGQ+YliNwPsx3XJdPgRD1G0npNkHiU8ZmuvGMBDMJhVWB5wr btn150103@gmail.com"
            },
            "metadata_fingerprint": "7zopuWFi3F0=",
            "name": "spark-worker-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.142.140.7",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/fine-branch-478814-e2/global/networks/spark-vpc-network",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/fine-branch-478814-e2/regions/asia-southeast1/subnetworks/spark-subnet-sg",
                "subnetwork_project": "fine-branch-478814-e2"
              }
            ],
            "project": "fine-branch-478814-e2",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/fine-branch-478814-e2/zones/asia-southeast1-b/instances/spark-worker-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "spark-node"
            ],
            "tags_fingerprint": "f888S1J6MFw=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.spark_vpc",
            "google_compute_subnetwork.spark_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2404-noble-arm64-v20251121",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/fine-branch-478814-e2/zones/asia-southeast1-b/disks/spark-worker-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/fine-branch-478814-e2/zones/asia-southeast1-b/instances/spark-worker-2",
            "instance_id": "5376475824109940276",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQC69zRrIiBg4krQbBusRQ6NwzFzQ1+BlL3LkN5tMor0Om/Y7BMKfBg2hc8GdHwrOtZVL/+82EkeZgVF9JHt78vOlHYJOFWwEVjvq6TcJaIoukDjZfQR99ndwyi91naCC0UBKDfbcGsQRjiBKz5t0r+jExwg9QHCpKZkm/ykZnYW7CelxSxst1RUoFdbAdr6Dun5d9iLMRneEOYtaeVL/kLUV2zUgfzsvxAMTdHcHEyWiOrnf9wWRKC2y/tiZhc4G5v2HI0ODatmiC9PM71dFC6+N0kZqO6ekwdqDUh/YGQ+YliNwPsx3XJdPgRD1G0npNkHiU8ZmuvGMBDMJhVWB5wr btn150103@gmail.com"
            },
            "metadata_fingerprint": "7zopuWFi3F0=",
            "name": "spark-worker-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.87.158.32",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/fine-branch-478814-e2/global/networks/spark-vpc-network",
                "network_ip": "10.0.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/fine-branch-478814-e2/regions/asia-southeast1/subnetworks/spark-subnet-sg",
                "subnetwork_project": "fine-branch-478814-e2"
              }
            ],
            "project": "fine-branch-478814-e2",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/fine-branch-478814-e2/zones/asia-southeast1-b/instances/spark-worker-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "spark-node"
            ],
            "tags_fingerprint": "f888S1J6MFw=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.spark_vpc",
            "google_compute_subnetwork.spark_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "spark_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/fine-branch-478814-e2/global/networks/spark-vpc-network",
            "mtu": 0,
            "name": "spark-vpc-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "5760397388716731993",
            "project": "fine-branch-478814-e2",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fine-branch-478814-e2/global/networks/spark-vpc-network"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "spark_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-22T07:03:32.450-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/fine-branch-478814-e2/regions/asia-southeast1/subnetworks/spark-subnet-sg",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "spark-subnet-sg",
            "network": "https://www.googleapis.com/compute/v1/projects/fine-branch-478814-e2/global/networks/spark-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "fine-branch-478814-e2",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/fine-branch-478814-e2/regions/asia-southeast1/subnetworks/spark-subnet-sg",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.spark_vpc"
          ]
        }
      ]
    }
  ]
}